--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "expo": "^26.0.0",
+    "express": "^4.16.3",
     "native-base": "^2.4.1",
+    "path": "^0.12.7",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-cards": "^1.1.4"
-  }
+  },
+  "proxy": "http://localhost:4000/"
 }
