--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "path": "^0.12.7",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
-    "react-native-cards": "^1.1.4"
+    "react-native-cards": "^1.1.4",
+    "request": "^2.85.0"
   },
-  "proxy": "http://localhost:4000/"
+  "proxy": "http://192.168.1.233:4000/"
 }
